--- a/project-pc-frontend-reactjs/src/views/Slider/Slider.scss
+++ b/project-pc-frontend-reactjs/src/views/Slider/Slider.scss
@@ -92,15 +92,19 @@
     width: 300px;
     text-align: left;
     padding: 0;
-    color: yellow;
+
     transform: translate(-20%, -50%);
     /* Căng giữa */
     display: none;
     /* ẩn hết */
     font-weight: bold;
-    text-shadow: 5px 5px 5px red;
+
+    color: #000000;
+    text-shadow: 3px 3px 10px rgb(246, 246, 162);
+    position: relative;
     /* Offset-x, Offset-y, Độ mờ, Màu */
 }
+
 
 .slide-item:nth-child(2) .slide-content {
     /* Chữ ở ảnh 2 đang đc phóng to được hiện ra */
@@ -128,8 +132,8 @@
 }
 
 .slide-des {
-    color: red;
-    text-shadow: 5px 5px 5px yellow;
+    color: #1cb321;
+    text-shadow: 3px 3px 10px rgb(246, 246, 162);
 }
 
 .slide-item button {
@@ -147,14 +151,14 @@
     from {
         opacity: o;
         transform: translate(o, 100px);
-        filter: blur(33px);
+        margin-top: -10px;
         /* Độ mờ 33px */
     }
 
     to {
         opacity: 1;
         transform: translate(0, 0);
-        filter: blur(0);
+        margin-top: 20px;
     }
 }
 
@@ -197,4 +201,8 @@
     background-color: white;
     color: black;
     border: 2px solid #555555;
+}
+
+.slide-button-2 {
+    margin-left: 20px;
 }
