--- a/project-pc-frontend-reactjs/src/views/page/login-view.scss
+++ b/project-pc-frontend-reactjs/src/views/page/login-view.scss
@@ -1,7 +1,9 @@
 .container-login {
     padding: 0px;
     margin: 0px;
-    margin-top: 20px;
+    width: 100%;
+    height: 100vh;
+    margin-top: 50px;
 }
 
 #btn-Login {
