--- a/project-pc-frontend-reactjs/src/views/SanPhamDesktop/SanPhamDesktop.scss
+++ b/project-pc-frontend-reactjs/src/views/SanPhamDesktop/SanPhamDesktop.scss
@@ -3,9 +3,10 @@
 }
 
 .fillter_TimKiem {
-    width: 70%;
-    display: flex;
-    justify-content: space-between;
+    width          : 90%;
+    display        : flex;
+    justify-content: space-around;
+    align-items    : center;
 }
 
 .container_TimKiem {
@@ -17,48 +18,48 @@
 }
 
 .TimKiem_input {
-    padding: 15px 8px;
-    display: block;
-    border: none;
+    padding      : 15px 8px;
+    display      : block;
+    border       : none;
     border-bottom: 1px solid #ccc;
-    width: 80%;
+    width        : 80%;
 }
 
 .TimKiem_input-hover-green:hover {
-    color: black !important;
+    color           : black !important;
     background-color: lightgray !important
 }
 
 .container_InputRadio_TimKiem {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 14px;
+    display            : block;
+    position           : relative;
+    padding-left       : 35px;
+    margin-bottom      : 12px;
+    cursor             : pointer;
+    font-size          : 14px;
     -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    -moz-user-select   : none;
+    -ms-user-select    : none;
+    user-select        : none;
 }
 
 /* Hide the browser's default radio button */
 .container_InputRadio_TimKiem input {
     position: absolute;
-    opacity: 0;
-    cursor: pointer;
+    opacity : 0;
+    cursor  : pointer;
 }
 
 /* Create a custom radio button */
 .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 15px;
-    width: 15px;
+    position        : absolute;
+    top             : 0;
+    left            : 0;
+    height          : 15px;
+    width           : 15px;
     background-color: #eee;
-    border-radius: 50%;
-    border: 5px solid #2196F3;
+    border-radius   : 50%;
+    border          : 5px solid #2196F3;
 }
 
 /* On mouse-over, add a grey background color */
@@ -69,14 +70,14 @@
 /* When the radio button is checked, add a blue background */
 .container_InputRadio_TimKiem input:checked~.checkmark {
     background-color: #f36421;
-    border: none;
+    border          : none;
 }
 
 /* Create the indicator (the dot/circle - hidden when not checked) */
 .checkmark:after {
-    content: "";
+    content : "";
     position: absolute;
-    display: none;
+    display : none;
 }
 
 /* Show the indicator (dot/circle) when checked */
