--- a/project-pc-frontend-reactjs/src/views/Slider/Slider.scss
+++ b/project-pc-frontend-reactjs/src/views/Slider/Slider.scss
@@ -132,7 +132,8 @@
 }
 
 .slide-des {
-    color: #1cb321;
+    color: #e71f1f;
+    font-size: 30px;
     text-shadow: 3px 3px 10px rgb(246, 246, 162);
 }
 
